--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "openai": "^4.51.0",
     "react": "^18.2.0",
