--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.51.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
