--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
+    "onnxruntime-web": "^1.18.0",
     "openai": "^4.51.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
